# gitme-cli

./: LICENSE  README.md  pyproject.toml
gitme/: cli.py  diff.py  prompt.py
gitme/providers/: base.py  ollama.py  openai.py  openrouter.py
